@@ -9,6 +9,13 @@
 #include "CFieldDecls.h"
 #include "CParseGeneral.h"
 
+
+/* ************************************************************************** */
+/* ************************ Methods used by X3D Parser  ********************* */
+/* ************************************************************************** */
+uintptr_t nextScriptHandle (void);
+
+
 /* ************************************************************************** */
 /* ****************************** ScriptFieldDecl *************************** */
 /* ************************************************************************** */
